--- a/WLConnector/Properties/Resources.resx
+++ b/WLConnector/Properties/Resources.resx
@@ -120,4 +120,7 @@
   <data name="test33" xml:space="preserve">
     <value>123</value>
   </data>
+  <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\settings.log;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
